# fastapi-auth-utils

./: CHANGELOG.md  MANIFEST.in  setup.cfg
examples/: api_key_auth.py  jwt_auth.py  mixed_auth.py  requirememnts.txt
src/auth_utils/: __init__.py  backends.py  utils.py
src/auth_utils/tests/: test_backends.py  test_utils.py
