[metadata]
name = fastapi-auth-utils
version = 2.0.2
author = Alireza Jafari
author_email = alirezaja1384@gmail.com
description = Authentication/Authorization utilities for 🚀FastAPI
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Typing :: Typed

project_urls =
    Source = https://github.com/alirezaja1384/fastapi-auth-utils
    Tracker = https://github.com/alirezaja1384/fastapi-auth-utils/issues


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
install_requires =
    fastapi >=0.101.0
    PyJWT >=2.8.0

[options.packages.find]
where = src

[options.package_data]
auth_utils = py.typed
